// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: IconPicker ui no results 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="asdlfjalsdjflajsdlf" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <ContentState
              mode="no-results"
              subTitle="No icons were found, please try again with a different query."
              title="No icons found"
            />
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [],
                  "first": true,
                  "last": true,
                  "number": 1,
                  "numberOfElements": 0,
                  "size": 0,
                  "totalElements": 0,
                  "totalPages": 1,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui with selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <div
      className="d-flex justify-content-between"
    >
      <Icon
        className="pt-2"
        icon="3d_rotation"
        id="icon-picker-value"
      />
      <TextButton
        className="mx-3"
        onClick={[Function]}
      >
        Clear
      </TextButton>
    </div>
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility"
            >
              <Tooltip
                content="accessibility"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility_new"
            >
              <Tooltip
                content="accessibility_new"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility_new"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible"
            >
              <Tooltip
                content="accessible"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible_forward"
            >
              <Tooltip
                content="accessible_forward"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible_forward"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance"
            >
              <Tooltip
                content="account_balance"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance_wallet"
            >
              <Tooltip
                content="account_balance_wallet"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance_wallet"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_box"
            >
              <Tooltip
                content="account_box"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_box"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_circle"
            >
              <Tooltip
                content="account_circle"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_circle"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="add_shopping_cart"
            >
              <Tooltip
                content="add_shopping_cart"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="add_shopping_cart"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm"
            >
              <Tooltip
                content="alarm"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_add"
            >
              <Tooltip
                content="alarm_add"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_add"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_off"
            >
              <Tooltip
                content="alarm_off"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_off"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_on"
            >
              <Tooltip
                content="alarm_on"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_on"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_inbox"
            >
              <Tooltip
                content="all_inbox"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_inbox"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_out"
            >
              <Tooltip
                content="all_out"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_out"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="android"
            >
              <Tooltip
                content="android"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="android"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="announcement"
            >
              <Tooltip
                content="announcement"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="announcement"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="arrow_right_alt"
            >
              <Tooltip
                content="arrow_right_alt"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="arrow_right_alt"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="aspect_ratio"
            >
              <Tooltip
                content="aspect_ratio"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="aspect_ratio"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assessment"
            >
              <Tooltip
                content="assessment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assessment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment"
            >
              <Tooltip
                content="assignment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_ind"
            >
              <Tooltip
                content="assignment_ind"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_ind"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_late"
            >
              <Tooltip
                content="assignment_late"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_late"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_return"
            >
              <Tooltip
                content="assignment_return"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_return"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_returned"
            >
              <Tooltip
                content="assignment_returned"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_returned"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_turned_in"
            >
              <Tooltip
                content="assignment_turned_in"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_turned_in"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="autorenew"
            >
              <Tooltip
                content="autorenew"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="autorenew"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="backup"
            >
              <Tooltip
                content="backup"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="backup"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="book"
            >
              <Tooltip
                content="book"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="book"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark"
            >
              <Tooltip
                content="bookmark"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark_border"
            >
              <Tooltip
                content="bookmark_border"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark_border"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmarks"
            >
              <Tooltip
                content="bookmarks"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmarks"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bug_report"
            >
              <Tooltip
                content="bug_report"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bug_report"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="build"
            >
              <Tooltip
                content="build"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="build"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="cached"
            >
              <Tooltip
                content="cached"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="cached"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "3d_rotation",
                    "accessibility",
                    "accessibility_new",
                    "accessible",
                    "accessible_forward",
                    "account_balance",
                    "account_balance_wallet",
                    "account_box",
                    "account_circle",
                    "add_shopping_cart",
                    "alarm",
                    "alarm_add",
                    "alarm_off",
                    "alarm_on",
                    "all_inbox",
                    "all_out",
                    "android",
                    "announcement",
                    "arrow_right_alt",
                    "aspect_ratio",
                    "assessment",
                    "assignment",
                    "assignment_ind",
                    "assignment_late",
                    "assignment_return",
                    "assignment_returned",
                    "assignment_turned_in",
                    "autorenew",
                    "backup",
                    "book",
                    "bookmark",
                    "bookmark_border",
                    "bookmarks",
                    "bug_report",
                    "build",
                    "cached",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 1010,
                  "totalPages": 29,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui without label 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility"
            >
              <Tooltip
                content="accessibility"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility_new"
            >
              <Tooltip
                content="accessibility_new"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility_new"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible"
            >
              <Tooltip
                content="accessible"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible_forward"
            >
              <Tooltip
                content="accessible_forward"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible_forward"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance"
            >
              <Tooltip
                content="account_balance"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance_wallet"
            >
              <Tooltip
                content="account_balance_wallet"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance_wallet"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_box"
            >
              <Tooltip
                content="account_box"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_box"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_circle"
            >
              <Tooltip
                content="account_circle"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_circle"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="add_shopping_cart"
            >
              <Tooltip
                content="add_shopping_cart"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="add_shopping_cart"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm"
            >
              <Tooltip
                content="alarm"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_add"
            >
              <Tooltip
                content="alarm_add"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_add"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_off"
            >
              <Tooltip
                content="alarm_off"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_off"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_on"
            >
              <Tooltip
                content="alarm_on"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_on"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_inbox"
            >
              <Tooltip
                content="all_inbox"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_inbox"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_out"
            >
              <Tooltip
                content="all_out"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_out"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="android"
            >
              <Tooltip
                content="android"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="android"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="announcement"
            >
              <Tooltip
                content="announcement"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="announcement"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="arrow_right_alt"
            >
              <Tooltip
                content="arrow_right_alt"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="arrow_right_alt"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="aspect_ratio"
            >
              <Tooltip
                content="aspect_ratio"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="aspect_ratio"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assessment"
            >
              <Tooltip
                content="assessment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assessment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment"
            >
              <Tooltip
                content="assignment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_ind"
            >
              <Tooltip
                content="assignment_ind"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_ind"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_late"
            >
              <Tooltip
                content="assignment_late"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_late"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_return"
            >
              <Tooltip
                content="assignment_return"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_return"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_returned"
            >
              <Tooltip
                content="assignment_returned"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_returned"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_turned_in"
            >
              <Tooltip
                content="assignment_turned_in"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_turned_in"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="autorenew"
            >
              <Tooltip
                content="autorenew"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="autorenew"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="backup"
            >
              <Tooltip
                content="backup"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="backup"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="book"
            >
              <Tooltip
                content="book"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="book"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark"
            >
              <Tooltip
                content="bookmark"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark_border"
            >
              <Tooltip
                content="bookmark_border"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark_border"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmarks"
            >
              <Tooltip
                content="bookmarks"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmarks"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bug_report"
            >
              <Tooltip
                content="bug_report"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bug_report"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="build"
            >
              <Tooltip
                content="build"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="build"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="cached"
            >
              <Tooltip
                content="cached"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="cached"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "3d_rotation",
                    "accessibility",
                    "accessibility_new",
                    "accessible",
                    "accessible_forward",
                    "account_balance",
                    "account_balance_wallet",
                    "account_box",
                    "account_circle",
                    "add_shopping_cart",
                    "alarm",
                    "alarm_add",
                    "alarm_off",
                    "alarm_on",
                    "all_inbox",
                    "all_out",
                    "android",
                    "announcement",
                    "arrow_right_alt",
                    "aspect_ratio",
                    "assessment",
                    "assignment",
                    "assignment_ind",
                    "assignment_late",
                    "assignment_return",
                    "assignment_returned",
                    "assignment_turned_in",
                    "autorenew",
                    "backup",
                    "book",
                    "bookmark",
                    "bookmark_border",
                    "bookmarks",
                    "bug_report",
                    "build",
                    "cached",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 1010,
                  "totalPages": 29,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui without selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility"
            >
              <Tooltip
                content="accessibility"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessibility_new"
            >
              <Tooltip
                content="accessibility_new"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessibility_new"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible"
            >
              <Tooltip
                content="accessible"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="accessible_forward"
            >
              <Tooltip
                content="accessible_forward"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="accessible_forward"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance"
            >
              <Tooltip
                content="account_balance"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_balance_wallet"
            >
              <Tooltip
                content="account_balance_wallet"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_balance_wallet"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_box"
            >
              <Tooltip
                content="account_box"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_box"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="account_circle"
            >
              <Tooltip
                content="account_circle"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="account_circle"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="add_shopping_cart"
            >
              <Tooltip
                content="add_shopping_cart"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="add_shopping_cart"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm"
            >
              <Tooltip
                content="alarm"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_add"
            >
              <Tooltip
                content="alarm_add"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_add"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_off"
            >
              <Tooltip
                content="alarm_off"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_off"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="alarm_on"
            >
              <Tooltip
                content="alarm_on"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="alarm_on"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_inbox"
            >
              <Tooltip
                content="all_inbox"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_inbox"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="all_out"
            >
              <Tooltip
                content="all_out"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="all_out"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="android"
            >
              <Tooltip
                content="android"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="android"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="announcement"
            >
              <Tooltip
                content="announcement"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="announcement"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="arrow_right_alt"
            >
              <Tooltip
                content="arrow_right_alt"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="arrow_right_alt"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="aspect_ratio"
            >
              <Tooltip
                content="aspect_ratio"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="aspect_ratio"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assessment"
            >
              <Tooltip
                content="assessment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assessment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment"
            >
              <Tooltip
                content="assignment"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_ind"
            >
              <Tooltip
                content="assignment_ind"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_ind"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_late"
            >
              <Tooltip
                content="assignment_late"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_late"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_return"
            >
              <Tooltip
                content="assignment_return"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_return"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_returned"
            >
              <Tooltip
                content="assignment_returned"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_returned"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="assignment_turned_in"
            >
              <Tooltip
                content="assignment_turned_in"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="assignment_turned_in"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="autorenew"
            >
              <Tooltip
                content="autorenew"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="autorenew"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="backup"
            >
              <Tooltip
                content="backup"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="backup"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="book"
            >
              <Tooltip
                content="book"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="book"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark"
            >
              <Tooltip
                content="bookmark"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmark_border"
            >
              <Tooltip
                content="bookmark_border"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmark_border"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bookmarks"
            >
              <Tooltip
                content="bookmarks"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bookmarks"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="bug_report"
            >
              <Tooltip
                content="bug_report"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="bug_report"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="build"
            >
              <Tooltip
                content="build"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="build"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="cached"
            >
              <Tooltip
                content="cached"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="cached"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "3d_rotation",
                    "accessibility",
                    "accessibility_new",
                    "accessible",
                    "accessible_forward",
                    "account_balance",
                    "account_balance_wallet",
                    "account_box",
                    "account_circle",
                    "add_shopping_cart",
                    "alarm",
                    "alarm_add",
                    "alarm_off",
                    "alarm_on",
                    "all_inbox",
                    "all_out",
                    "android",
                    "announcement",
                    "arrow_right_alt",
                    "aspect_ratio",
                    "assessment",
                    "assignment",
                    "assignment_ind",
                    "assignment_late",
                    "assignment_return",
                    "assignment_returned",
                    "assignment_turned_in",
                    "autorenew",
                    "backup",
                    "book",
                    "bookmark",
                    "bookmark_border",
                    "bookmarks",
                    "bug_report",
                    "build",
                    "cached",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 1010,
                  "totalPages": 29,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;
